修改配置文件

--- a/springcloud-provider-server/application-test.yml
+++ b/springcloud-provider-server/application-test.yml
@@ -1,8 +1,8 @@
 spring:
-  application:
-      name: springcloud-provider-server
-    profiles:
-      active: test
+  # application:
+  #     name: springcloud-provider-server
+  #   profiles:
+  #     active: test
   datasource:
         url: jdbc:mysql://192.168.2.83:3306/hussar?autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false
         username: hussar
